Updated DurationRetrieval to get duration value from distance matrix api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         </activity>
         <activity android:name=".view.DisplayTrackingsListActivity" />
         <activity
-            android:name=".view.TabWidgetActivity"
-            android:theme="@style/TabWidgetTheme">
+            android:name=".view.TabWidgetActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
